// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should apply classnames from props correctly 1`] = `
<body
  class="Modal__body"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="portal-class"
  >
    <div
      class="Modal__overlay overlay-class"
    >
      <div
        aria-label="Content label"
        aria-modal="true"
        class="Modal__content content-class"
        role="dialog"
        tabindex="-1"
      >
        Some children
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal should render correctly 1`] = `
<body
  class="Modal__body"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="Modal__overlay"
    >
      <div
        aria-label="Content label"
        aria-modal="true"
        class="Modal__content"
        role="dialog"
        tabindex="-1"
      >
        Some children
      </div>
    </div>
  </div>
</body>
`;
